--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,18 +1,21 @@
-# Site settings
 title: Estructura de Máquinas
-year: 2017
-slack_page: https://cc3-2017.slack.com
-descripcion: >
- Pagina del curso de CC3 - Estructura de Máquinas de Universidad Galileo
-baseurl: ""
-url: "localhost:4000"
+description: Página del curso de CC3 Estructura de Máquinas Universidad Galileo
 
-# Build settings
+url: localhost:4000
+baseurl: ""
+
 markdown: kramdown
 highlighter: rouge
-kramdown:
-  auto_ids:         true
-  footnote_nr:      1
-  entity_output:    as_char
-  toc_levels:       1..6
-  enable_coderay:   false
+
+navigation:
+ - title: Home
+   url: /index.html
+ - title: Laboratorios
+   url: /labs
+ - title: Proyectos
+   url: /proyectos
+
+social:
+   github: cc-3
+
+google_analytics: "UA-58263416-1"
