--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Estructura de Máquinas
+title: CC3 Estructura de Máquinas
 description: Página del curso de CC3 Estructura de Máquinas Universidad Galileo
 
 url: "https://cc-3.github.io/"
