update lab0 docs

--- a/page/es/mkdocs.yml
+++ b/page/es/mkdocs.yml
@@ -5,7 +5,7 @@ site_author: CC-3
 site_url: https://cc-3.github.io/
 
 # Repository
-edit_uri: edit/master/page/docs
+edit_uri: edit/master/page/es/docs
 repo_name: cc-3/MachineStructures
 repo_url: https://github.com/cc-3/MachineStructures
 
