add docker files

--- a/autograder/uwsgi.ini
+++ b/autograder/uwsgi.ini
@@ -1,5 +1,17 @@
 [uwsgi]
-http = localhost:5000
 wsgi-file = start.py
 callable = APP
 
+master = true
+processes = 3
+max-worker-lifetime = 60
+
+socket = /tmp/autograders.sock
+chmod-socket = 666
+vacuum = true
+
+hook-master-start = unix_signal:15 gracefully_kill_them_all
+
+show-config = true
+
+die-on-term = true
