update nginx config files

--- a/autograders/server/config/autograders.conf
+++ b/autograders/server/config/autograders.conf
@@ -1,5 +1,10 @@
 server {
-  listen 80;
+  listen 443;
+  server_name cc-3.site;
+
+  ssl on;
+  ssl_certificate /etc/ssl/cc3.pem;
+  ssl_certificate_key /etc/ssl/cc3.key;
 
   location / {
     include uwsgi_params;
