--- a/autograders/dashboard/package.json
+++ b/autograders/dashboard/package.json
@@ -7,6 +7,7 @@
     "firebase": "^5.7.3",
     "history": "^4.7.2",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-countdown-now": "^2.1.0",
