--- a/autograders/dashboard/package.json
+++ b/autograders/dashboard/package.json
@@ -13,7 +13,9 @@
     "react-countdown-now": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-sizeme": "^2.5.2",
+    "react-vis": "^1.11.6"
   },
   "scripts": {
     "start": "react-scripts start",
