add pycparser dependency

--- a/autograders/autograder/Dockerfile
+++ b/autograders/autograder/Dockerfile
@@ -6,7 +6,7 @@ LABEL maintainer="CC-3 Machine Structures <cc3.staff@gmail.com>"
 RUN apt-get update && apt-get upgrade -y && \
     apt-get install --no-install-recommends build-essential make \
     python3-dev python3-pip python3-setuptools python3-wheel -y && \
-    pip3 install tabulate pycrypto psutil && \
+    pip3 install tabulate pycrypto psutil pycparser && \
     rm -rf /var/lib/apt/lists/*
 
 CMD ["/usr/bin/bash"]
