--- a/autograders/dashboard/package.json
+++ b/autograders/dashboard/package.json
@@ -3,19 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
     "firebase": "^5.7.3",
     "history": "^4.7.2",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
-    "react-countdown-now": "^2.1.0",
     "react-dom": "^16.7.0",
+    "react-easy-chart": "^1.0.0",
+    "react-resize-detector": "^3.4.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-sizeme": "^2.5.2",
-    "react-vis": "^1.11.6"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
