--- a/page/es/mkdocs.yml
+++ b/page/es/mkdocs.yml
@@ -36,6 +36,18 @@ extra_javascript:
 # Extensions
 markdown_extensions:
   - admonition
+  - pymdownx.superfences:
+      preserve_tabs: true
+      custom_fences:
+        - name: flow
+          class: uml-flowchart
+          format: !!python/name:pymdownx.superfences.fence_code_format
+        - name: sequence
+          class: uml-sequence-diagram
+          format: !!python/name:pymdownx.superfences.fence_code_format
+        - name: math
+          class: arithmatex
+          format: !!python/name:pymdownx.arithmatex.fence_mathjax_format
   - codehilite:
       guess_lang: false
   - toc:
@@ -44,10 +56,12 @@ markdown_extensions:
 nav:
   - Inicio: index.md
   - Laboratorios:
-    - 'Lab 0: Git': labs/lab00.md
-    - 'Lab 1: C y GDB': labs/lab01.md
-    - 'Lab 2: C y MM': labs/lab02.md
-    - 'Lab 3: RISC-V': labs/lab03.md
+    - '0: Git': labs/lab00.md
+    - '1: C y GDB': labs/lab01.md
+    - '2: C y MM': labs/lab02.md
+    - '3: RISC-V': labs/lab03.md
+  - Proyectos:
+    - '1: C y RISC-V': projs/proj01.md
   - Notas:
     - 'Números': notes/00_Numbers-Representation.md
     - 'C': notes/01_C.md
